fixed textarea alignmet

--- a/public/stylesheets/settings-styles.less
+++ b/public/stylesheets/settings-styles.less
@@ -473,7 +473,7 @@ Manage Notes Screen Styles
   height: 30px;
   width: 400px;
   margin-left: 13px;
-  margin-top: 5px;
+  margin-top: 16px;
 }
 
 textarea {
@@ -571,7 +571,7 @@ textarea {
 
 .link-container {
   margin-left: 35px;
-
+  margin-top: 2px;
   position: absolute;
 }
 
